examples/type_system.cvm
a=5;
a=2.1;//error
print(typeid(a));
